@@ -15,6 +15,7 @@
  13. New archon LIST option: Orphans, for rooms without incoming exits
  14. MODIFY command supports MQL with MODIFY UPDATE:...
  15. DESTROY command supports MQL with DESTROY DELETE: from ...
+ 16. Clan Government role 'CLAN_MOTD' changed to 'READ_MOTD'. 'CREATE_MOTD' added.
      
 # Build 5.10.0 Release 9/23/2022
   1. New Scriptable functions: ROOMPC and AREAPC
